@@ -299,6 +299,7 @@ set g_maxConnsPerIP 4
 set shoutcastPassword "none"
 set g_headshot 0
 set g_instagibDamage 400
+set g_shrubbotOptions 0
 
 exec campaigncycle.cfg
 set com_watchdog 60
