@@ -69,6 +69,12 @@ dt {
 <td><a href="#g_headshot">g_headshot</a></td>
 <td><a href="#g_instagibDamage">g_instagibDamage</a></td>
 </tr>
+<tr>
+<td><a href="#g_shrubbotOptions">g_shrubbotOptions</a></td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
 </table>
 
 <br>
@@ -3272,9 +3278,9 @@ the fake clients Denial of Service attack.</p>
 <p>Default is "none"</p>
 
 <a name="g_headshot"></a>
-<dt>g_headshot [bitflag]
+<dt>g_headshot [integer]
 <dd>
-<p>Add these values together for custom headshot modes:</p>
+<p>This is a bitflag cvar that supports the following values</p>
 <dl>
 	<dt>1
 	<dd>Headshots only
@@ -3290,6 +3296,16 @@ the fake clients Denial of Service attack.</p>
 <p>Damage used for instagib mode (e.g. set this to 160 so that a player can
 still be revived after being shot.).</p>
 <p>Default is 400</p>
+
+<a name="g_shrubbotOptions"></a>
+<dt>g_shrubbotOptions [integer]
+<dd>
+<p>This is a bitflag cvar that supports the following values</p>
+<dl>
+	<dt>1
+	<dd>Shrubbot flag '0' admins will be moved to spectators due to team inactivity
+</dl>
+<p>Default is 0</p>
 
 <hr>
 <a name="mapvoting"></a>
